--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -10,14 +10,14 @@
 	</head>
 	
 	<body>
-		<h1>Rango says...</h1>
+		<h1>About</h1>
 		<div>
-			hey there partner! <br />
+			Rango says here is the about page. <br />
 			<strong>{{ boldmessage }}</strong><br />
 		</div>
 		<div>
-			<a href="/rango/about/">About</a><br />
-			<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /> <!-- New line -->
+			<a href="/rango/index/">Index</a><br />
+			<img src="{{ MEDIA_URL}}cat.jpg" /> <!-- New line -->
 		</div>
 	</body>
 </html>
