--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -18,6 +18,7 @@
 		<div>
 			<a href="/rango/index/">Index</a><br />
 			<img src="{{ MEDIA_URL}}cat.jpg" /> <!-- New line -->
+			<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /> <!-- New line -->
 		</div>
 	</body>
 </html>
