chapter 7 done (i hope)

--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -21,6 +21,13 @@
             {% endif %}
         </div>
         <div>
+            {% if category %}
+                <a href="/rango/category/{{category.slug}}/add_page/">Add page</a><br/>
+            {% else %}
+                A category by this name does not exist.
+            {% endif %}
+        </div>
+        <div>
             <a href="/rango/">Index</a>
         </div>
     </body>
