--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
-    <body>
-        <h1>Add a Page</h1>
 
-        <div>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}
+    Add Page: {{ category.name }}
+{% endblock %}
+
+    {% block body_block %}
+        <h1>Add a Page</h1>
             {% if category %}
                 <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
                     {% csrf_token %}
@@ -21,11 +22,6 @@
                     <input type="submit" name="submit" value="Add Page"/>
                 </form>
             {% else %}
-                A category by this name does not exist.
+                A category by this name does not exist
             {% endif %}
-        </div>
-        <div>
-            <a href="/rango/category/{{ category.slug }}/">Back</a>
-        </div>
-    </body>
-</html>
+    {% endblock %}
