--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,24 +1,16 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-{% load staticfiles %} <!-- New line -->
+{% block title_block %}
+    About
+{% endblock %}
 
-<html>
-	
-	
-	<head>
-		<title>Rango</title>
-	</head>
-	
-	<body>
-		<h1>About</h1>
-		<div>
-			Rango says here is the about page. <br />
-			<strong>{{ boldmessage }}</strong><br />
-		</div>
-		<div>
-			<a href="/rango/">Index</a><br />
-			<img src="{{ MEDIA_URL}}cat.jpg" /> <!-- New line -->
-			<img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" /> <!-- New line -->
-		</div>
-	</body>
-</html>
+{% block body_block %}
+    This is the about page for Rango!! <br />
+    This tutorial has been put together by Ross Johnstone <br/>
+    {{ normalmessage }}<br />
+    {{ aboutinfo }}<br/>
+
+    <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
+    <img src="{{MEDIA_URL}}cat.jpg" alt="Picture of a cat"/>
+{% endblock %}
