--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,34 +1,29 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
-    <body>
-        <div>
-            {% if category %}
-                <h1>{{ category.name}}</h1>
-                {% if pages %}
-                    <ul>
-                        {% for page in pages %}
-                            <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-                        {% endfor %}
-                    </ul>
-                {% else %}
-                    <strong>No pages currently in category.</strong>
-                {% endif %}
-            {% else %}
-                The specified category does not exist!
-            {% endif %}
-        </div>
-        <div>
-            {% if category %}
-                <a href="/rango/category/{{category.slug}}/add_page/">Add page</a><br/>
-            {% else %}
-                A category by this name does not exist.
-            {% endif %}
-        </div>
-        <div>
-            <a href="/rango/">Index</a>
-        </div>
-    </body>
-</html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}
+    {{ category.name }}
+{% endblock %}
+
+{% block body_block %}
+    {% if category %}
+        <h1>{{ category.name }}</h1>
+        {% if pages %}
+            <ul>
+                {% for page in pages %}
+                    <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <strong>No pages currently in category.</strong>
+        {% endif %}
+    {% else %}
+            The specified category does not exist!
+    {% endif %}
+
+    {% if category %}
+        <a href="/rango/category/{{category.slug}}/add_page/">Add page</a><br/>
+    {% else %}
+        A category by this name does not exist
+    {% endif %}
+{% endblock %}
