--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -22,7 +22,9 @@
     {% endif %}
 
     {% if category %}
-        <a href="/rango/category/{{category.slug}}/add_page/">Add page</a><br/>
+        {% if user.is_authenticated %}
+            <a href="/rango/category/{{category.slug}}/add_page/">Add page</a><br/>
+        {% endif %}
     {% else %}
         A category by this name does not exist
     {% endif %}
