--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -7,9 +7,10 @@
 
 {% block body_block %}
     This is the about page for Rango!! <br />
-    This tutorial has been put together by Ross Johnstone <br/>
+    visits: {{ visits }} <br />
+    This tutorial has been put together by Ross Johnstone <br />
     {{ normalmessage }}<br />
-    {{ aboutinfo }}<br/>
+    {{ aboutinfo }}<br />
 
     <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
     <img src="{{MEDIA_URL}}cat.jpg" alt="Picture of a cat"/>
