--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block body_block %}
-        <h1>Rango says...</h1>
+        <h1>Rango says... </h1>
 
         <div>
             {% if user.is_authenticated %}
@@ -17,6 +17,7 @@
         </div>
 
         <div>
+            visits: {{ visits }}
             {% if categories %}
             <h2>Most Liked Categories</h2>
             <ul>
