--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -26,8 +26,8 @@
         <div>
             <ul>
                 {% if user.is_authenticated %}
-                    <li><a href="{% url 'add_category' %}">Add New Category</a></li>
-                    <li><a href="{% url 'restricted' %}">Restricted Pages</a></li>
+                    <li><a href="{% url 'add_category' %}">Add a New Category</a></li>
+                    <li><a href="{% url 'restricted' %}">Restricted Page</a></li>
                     <li><a href="{% url 'logout' %}">Logout</a></li>
                 {% else %}
                     <li><a href="{% url 'login' %}">Sign In</a></li>
